--- a/roles/devcore_go/defaults/main.yml
+++ b/roles/devcore_go/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 devcore_go_home: "{{ ansible_env.HOME }}"
-devcore_go_boot_version: "{{ go_boot_version | default('1.17.3') }}"
-devcore_go_boot_root: "{{ devcore_go_home }}/go{{ devcore_go_boot_version }}"
+devcore_go_url: "https://go.dev/dl/{{ devcore_go_asset }}"
+devcore_go_asset: "go{{ devcore_go_version }}.{{ devcore_go_target_arch }}.tar.gz"
+devcore_go_version: "{{ go_version | default('1.22.2') }}"
 devcore_go_target_arch: "{{ go_target_arch | default('linux-amd64') }}"
 devcore_go_goroot: "{{ devcore_go_home }}/go"
-devcore_go_version: "{{ go_version | default('1.20.1') }}"
 devcore_go_gopath: "{{ devcore_go_home }}/dev"
